<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelaAprovado">

    <TextView
        android:id="@+id/txtDisciplina2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Disciplina:"/>

    <Spinner
        android:id="@+id/disciplina"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtDisciplina2" />

    <TextView
        android:id="@+id/txtNotaA1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/disciplina"
        android:text="Nota A1:"/>

    <EditText
        android:id="@+id/edtNotaA1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtNotaA1"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/txtNotaA1"/>

    <TextView
        android:id="@+id/txtNotaA2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtNotaA1"
        android:text="Nota A2:" />

    <EditText
        android:id="@+id/edtNotaA2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtNotaA2"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/txtNotaA2"/>

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtNotaA2"
        android:text="@string/btnCalcular"/>

    <TextView
        android:id="@+id/txtNotaFinal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnCalcular"
        android:textStyle="bold"
        android:textAlignment="center"
        android:text="" />

    <TextView
        android:id="@+id/txtSituacao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtNotaFinal"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@color/corAprovado"
        android:text="" />

</RelativeLayout>